[tool.poetry]
name = "pnka"
version = "0.1.0"
description = ""
authors = [
    "Camila Kolling",
    "Till Speicher",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
numpy = "^1.24.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
jupyterlab = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    "pnka",
]
testpaths = [
    "tests",
]
